[workspace]
members = [
  "crates/slipstream-core",
  "crates/slipstream-dns",
  "crates/slipstream-ffi",
  "crates/slipstream-client",
  "crates/slipstream-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
description = "High-performance DNS tunnel carrying QUIC packets over DNS"
license = "GPL-3.0-only"
repository = "https://github.com/Fox-Fig/slipstream-rust-plus"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
