[package]
name = "slipstream-core"
version = "0.1.0"
edition = "2021"
description = "Core utilities for Slipstream"
license = "GPL-3.0-only"
repository = "https://github.com/Fox-Fig/slipstream-rust-plus"
readme = "../../README.md"

[dependencies]
libc = "0.2"

[features]
default = []
invariant-panic = []
test-support = []
