[package]
name = "slipstream-dns"
version = "0.1.0"
edition = "2021"
description = "DNS codec for Slipstream's QUIC-over-DNS tunnel"
license = "GPL-3.0-only"
repository = "https://github.com/Fox-Fig/slipstream-rust-plus"
readme = "../../README.md"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
